# UlakTask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
Google_tests/: CMakeLists.txt  CommandLineTest.cpp  FileAnalyzerTest.cpp  FileHelperTest.cpp  LibaryIndexerTest.cpp
data/testtxt/: a1.txt
data/testtxt/a2/: a3.txt
data/testtxt/a2/a21/: a3.txt
docs/: implementation_details.md  requirements
src/commandLineUtility/: CommandLine.h
src/exception/: BadCommit.h
src/fileAnalyzer/: FileAnalyzer.cpp  FileAnalyzer.h
src/fileHelper/: FileHelper.cpp  FileHelper.h
src/indexer/: LibraryIndexer.cpp  LibraryIndexer.h
src/searcher/: LibrarySearcher.h
ulak/: CMakeLists.txt
ulak/src/commandLineUtility/: CommandLine.cpp  CommandLine.h
ulak/src/exception/: BadCommit.cpp
ulak/src/fileAnalyzer/: FileAnalyzer.cpp
ulak/src/indexer/: LibraryIndexer.cpp  LibraryIndexer.h
ulak/src/searcher/: LibrarySearcher.cpp  LibrarySearcher.h
ulak/src/util/: FileHelper.cpp  FileHelper.h
